# rus-ai-cup-2015

./: .gitignore  BonusUser.cpp  BonusUser.h  CMakeCache.txt  CMakeLists.txt  Makefile  Mover.cpp  Mover.h  MyStrategy.cpp  PathAnalyzer.cpp  PathAnalyzer.h  PathFinder.cpp  PathFinder.h  PathPattern.cpp  PathPattern.h  Structs.h  TrajTile.cpp  TrajTile.h  Utils.cpp  Utils.h  ai  cmake_install.cmake  cpp-cgdk_vs12.sln  cpp-cgdk_vs12.vcxproj  cpp-cgdk_vs12.vcxproj.filters  stdafx.h
Debug/: cpp-cgdk_vs12.ilk  vc120.idb
Debug/cpp-cgdk_vs12.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  cpp-cgdk_vs12.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/cpp-cgdk_vs12.tlog/: CL.write.1.tlog
rus-ai-cup-2015.xcodeproj/: project.pbxproj
rus-ai-cup-2015.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rus-ai-cup-2015.xcodeproj/project.xcworkspace/xcshareddata/: rus-ai-cup-2015.xccheckout
rus-ai-cup-2015.xcodeproj/project.xcworkspace/xcuserdata/prohor.xcuserdatad/: UserInterfaceState.xcuserstate
rus-ai-cup-2015.xcodeproj/xcuserdata/prohor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
rus-ai-cup-2015.xcodeproj/xcuserdata/prohor.xcuserdatad/xcschemes/: rus-ai-cup-2015.xcscheme  xcschememanagement.plist
